--- a/amazon-front/src/index.css
+++ b/amazon-front/src/index.css
@@ -219,3 +219,22 @@ a:hover {
 .button.primary {
 	background-color: #f0c040;
 }
+
+/* Cart */
+.cart {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 1rem;
+	align-items: flex-start;
+}
+
+.cart-list {
+	flex: 3 1 60rem;
+}
+
+.cart-action {
+	flex: 1 1 20rem;
+	background-color: #f0f0f0;
+	border-radius: .5rem;
+	padding: 1rem;
+}
